[gd_scene load_steps=11 format=3 uid="uid://bt14anogtdard"]

[ext_resource type="Script" uid="uid://bt7c3x4w7q8wr" path="res://Scripts/Slots/slots_panel.gd" id="1_dmlxd"]
[ext_resource type="PackedScene" uid="uid://2qv3jg6fwbo" path="res://Scenes/Slots/IconSlot.tscn" id="2_nbwu5"]
[ext_resource type="Script" uid="uid://c6nwoc5w3y2fk" path="res://Scripts/Slots/slots.gd" id="2_npwgh"]
[ext_resource type="PackedScene" uid="uid://dvaygrrn6ntvd" path="res://Scenes/Spin/SpinChances.tscn" id="4_xyb8e"]
[ext_resource type="Script" uid="uid://1w4fup4jc6y7" path="res://Scripts/Slots/ChancesControllers/line_types.gd" id="6_r3hys"]
[ext_resource type="Script" uid="uid://mtrjlfatpx7e" path="res://Scripts/WinControllers/winners_line_types.gd" id="7_4c06h"]
[ext_resource type="Script" uid="uid://ce4mudykygsh5" path="res://Scripts/Slots/ChancesControllers/slots_controllers.gd" id="7_r3hys"]
[ext_resource type="Script" uid="uid://dgcgi4wjdadfc" path="res://Scripts/WinControllers/winner_line_control.gd" id="8_r0w0c"]
[ext_resource type="Script" uid="uid://b7lsvirekq1ej" path="res://Scripts/Slots/Animations/animated_spin.gd" id="9_r0w0c"]
[ext_resource type="Texture2D" uid="uid://b2ddo4eh1o66h" path="res://Art/Effects/SubSlot.png" id="10_gw2qs"]

[node name="SlotsPanel" type="Node2D"]
script = ExtResource("1_dmlxd")

[node name="Slots" type="Node2D" parent="."]
script = ExtResource("2_npwgh")

[node name="IconSlot1" parent="Slots" instance=ExtResource("2_nbwu5")]

[node name="IconSlot2" parent="Slots" instance=ExtResource("2_nbwu5")]
position = Vector2(0, 70)

[node name="IconSlot3" parent="Slots" instance=ExtResource("2_nbwu5")]
position = Vector2(0, 140)

[node name="IconSlot4" parent="Slots" instance=ExtResource("2_nbwu5")]
position = Vector2(70, 0)

[node name="IconSlot5" parent="Slots" instance=ExtResource("2_nbwu5")]
position = Vector2(70, 70)

[node name="IconSlot6" parent="Slots" instance=ExtResource("2_nbwu5")]
position = Vector2(70, 140)

[node name="IconSlot7" parent="Slots" instance=ExtResource("2_nbwu5")]
position = Vector2(140, 0)

[node name="IconSlot8" parent="Slots" instance=ExtResource("2_nbwu5")]
position = Vector2(140, 70)

[node name="IconSlot9" parent="Slots" instance=ExtResource("2_nbwu5")]
position = Vector2(140, 140)

[node name="IconSlot10" parent="Slots" instance=ExtResource("2_nbwu5")]
position = Vector2(210, 0)

[node name="IconSlot11" parent="Slots" instance=ExtResource("2_nbwu5")]
position = Vector2(210, 70)

[node name="IconSlot12" parent="Slots" instance=ExtResource("2_nbwu5")]
position = Vector2(210, 140)

[node name="IconSlot13" parent="Slots" instance=ExtResource("2_nbwu5")]
position = Vector2(280, 0)

[node name="IconSlot14" parent="Slots" instance=ExtResource("2_nbwu5")]
position = Vector2(280, 70)

[node name="IconSlot15" parent="Slots" instance=ExtResource("2_nbwu5")]
position = Vector2(280, 140)

[node name="SpinChances" parent="." instance=ExtResource("4_xyb8e")]

[node name="ChancesControllers" type="Node" parent="."]

[node name="LineTypes" type="Node" parent="ChancesControllers"]
script = ExtResource("6_r3hys")

[node name="SlotsControllers" type="Node" parent="ChancesControllers"]
script = ExtResource("7_r3hys")

[node name="WinControllers" type="Node" parent="."]

[node name="WinnersLineTypes" type="Node" parent="WinControllers"]
script = ExtResource("7_4c06h")

[node name="WinnerLineControl" type="Node" parent="WinControllers"]
script = ExtResource("8_r0w0c")

[node name="Animations" type="Node" parent="."]

[node name="AnimatedSpin" type="Node" parent="Animations"]
script = ExtResource("9_r0w0c")

[node name="RowTimer" type="Timer" parent="Animations/AnimatedSpin"]
wait_time = 0.3

[node name="RowTimer2" type="Timer" parent="Animations/AnimatedSpin"]
wait_time = 0.4

[node name="RowTimer3" type="Timer" parent="Animations/AnimatedSpin"]
wait_time = 0.5

[node name="SpinTimer" type="Timer" parent="Animations"]
one_shot = true

[node name="Columns" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0.560784)

[node name="SubSlot" type="Sprite2D" parent="Columns"]
position = Vector2(35, 68)
scale = Vector2(1, 3.46875)
texture = ExtResource("10_gw2qs")

[node name="SubSlot2" type="Sprite2D" parent="Columns"]
position = Vector2(105, 68)
scale = Vector2(1, 3.46875)
texture = ExtResource("10_gw2qs")

[node name="SubSlot3" type="Sprite2D" parent="Columns"]
position = Vector2(175, 68)
scale = Vector2(1, 3.46875)
texture = ExtResource("10_gw2qs")

[node name="SubSlot4" type="Sprite2D" parent="Columns"]
position = Vector2(245, 68)
scale = Vector2(1, 3.46875)
texture = ExtResource("10_gw2qs")

[node name="Rows" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0.541176)

[node name="SubSlot" type="Sprite2D" parent="Rows"]
position = Vector2(142.709, 35)
rotation = 1.5708
scale = Vector2(1, 5.73796)
texture = ExtResource("10_gw2qs")

[node name="SubSlot2" type="Sprite2D" parent="Rows"]
position = Vector2(142.709, 105)
rotation = 1.5708
scale = Vector2(1, 5.73796)
texture = ExtResource("10_gw2qs")

[connection signal="timeout" from="Animations/AnimatedSpin/RowTimer" to="Animations/AnimatedSpin" method="_on_row_timer_timeout"]
[connection signal="timeout" from="Animations/AnimatedSpin/RowTimer2" to="Animations/AnimatedSpin" method="_on_row_timer_2_timeout"]
[connection signal="timeout" from="Animations/AnimatedSpin/RowTimer3" to="Animations/AnimatedSpin" method="_on_row_timer_3_timeout"]
